# lambda-microvm-dungeon-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml
.cursor/: hooks.json
.cursor/hooks/: ruff-format.sh
.cursor/rules/: deploy-lanes.mdc
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
app/: __init__.py  config.py  main.py  state_store.py
docs/: architecture.md  rfc0002-progress.md  rfc0002-todo.md  security.md
evals/: README.md  gameplay_experience.py  narration_models.py
infra/: README.md  bootstrap.yaml  github-release-role.yaml
scripts/: __init__.py  benchmark_microvm.py  build_microvm_image.py  microvm_image.py  microvm_session.py  orchestrator.py
src/: server.js  state-store.js
test/: server.test.js
tests/: test_adventure.py  test_agents.py  test_api.py  test_audio.py  test_control_plane_adventure_step.py  test_control_plane_campaign_workflow.py  test_control_plane_campaigns.py  test_control_plane_character_step.py  test_control_plane_contracts.py  test_control_plane_http.py  test_control_plane_microvm_manager.py  test_control_plane_persistence.py  test_control_plane_realtime.py  test_control_plane_telemetry.py  test_control_plane_turns.py  test_microvm_image.py  test_narrator.py  test_observability.py  test_orchestrator.py  test_portrait.py  test_speech.py  test_tui.py
web/: .env.example  README.md  debug.html  index.html  package-lock.json  package.json
(+179 files in other folders)
