[project]
name = "lambda-microvm-dungeon-agent"
version = "0.1.0"
description = "A stateful AI-agent backend lab for AWS Lambda MicroVMs"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "DavidCs9" }]
dependencies = [
  "fastapi>=0.116,<1",
  "pydantic-settings>=2.10,<3",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.17,<2",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]
tooling = [
    "boto3>=1.43.51",
    "boto3-stubs[cloudformation,lambda-microvms,s3]>=1.43.51",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=app --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app", "scripts", "tests"]
plugins = ["pydantic.mypy"]
